[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/CollisionShapeRenderer/CollisionShapeRenderer.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/gameobjects/CubeFloor/PlatformBase.gd.gd" type="Script" id=2]
[ext_resource path="res://src/gameobjects/SciFiCube/SciFiCube.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gameobjects/CubeFloor/CubeFloorAddons/ScoreZone.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 92.745, 67.3254, 9.532 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 566.971, 50, 431.679 )

[node name="CubeFloor" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 0.951057, 0.463526, 0, -0.309017, 1.42658, 0, 0, 0 )
script = ExtResource( 2 )
start_position = Vector3( 0, 84, 123.969 )
end_position = Vector3( 0, 0, -84.626 )

[node name="ScifiCube" parent="." instance=ExtResource( 4 )]
transform = Transform( 16, 0, 0, 0, 32, 1.90735e-06, 0, -9.53674e-07, 64, 0.17, 0.661, -0.303 )

[node name="StaticBody" type="StaticBody" parent="ScifiCube"]

[node name="CollisionShape" type="CollisionShape" parent="ScifiCube/StaticBody"]
shape = SubResource( 1 )

[node name="FloorEnterArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 72.5172, -20.4629 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="FloorEnterArea"]
shape = SubResource( 2 )

[node name="CollisionShapeRenderer" parent="FloorEnterArea" instance=ExtResource( 1 )]
transform = Transform( 92.745, 0, 0, 0, 67.3254, 0, 0, 0, 9.532, 0, 0, 0 )
visible = false
__collision_shape = SubResource( 2 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -84.626 )

[node name="ScoreZone" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, -1.49012e-08, 1, 0, 0, 0 )

[node name="RestartZone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, -2.98023e-08, 1, 0, -188.067, -40.7379 )

[node name="CollisionShape" type="CollisionShape" parent="RestartZone"]
shape = SubResource( 3 )
[connection signal="body_entered" from="ScoreZone" to="." method="__on_player_entered_scorezone"]
